force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Environment__c/fields/sf_devops__Expired__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, this environment is no longer used by the dev ops center</description>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>