force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Environment__c/fields/sf_devops__Last_Revision_Counter__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Last_Revision_Counter__c</fullName>
    <description>This stores the last revision counter that was queried from the source members in the development environment that we represent.</description>
    <label>Last Revision Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>