force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Environment__c/fields/sf_devops__Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Named_Credential__c</fullName>
    <description>The DeveloperName value of the NamedCredential to use to connect to this environment.</description>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>