force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Environment__c/fields/sf_devops__Operation_Result__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Operation_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field references the AOR for the back sync operation.</description>
    <label>Operation Result</label>
    <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
    <relationshipLabel>Environments</relationshipLabel>
    <relationshipName>Environments</relationshipName>
    <type>Lookup</type>
</CustomField>