force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Environment__c/fields/sf_devops__Org_Id__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Org_Id__c</fullName>
    <externalId>true</externalId>
    <label>Organization Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>