force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Environment__c/fields/sf_devops__Refresh_Source__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Refresh_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The environment that this environment was refreshed from.</description>
    <label>Refresh Source</label>
    <referenceTo>sf_devops__Environment__c</referenceTo>
    <relationshipLabel>Environments</relationshipLabel>
    <relationshipName>Refreshed_Environments</relationshipName>
    <type>Lookup</type>
</CustomField>