force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Environment__c/fields/sf_devops__Replaces__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Replaces__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A reference to the Environment that this environment replaces in the DevOps center.</description>
    <label>Replaces</label>
    <referenceTo>sf_devops__Environment__c</referenceTo>
    <relationshipLabel>Replaces</relationshipLabel>
    <relationshipName>Replaces_Bys</relationshipName>
    <type>Lookup</type>
</CustomField>