force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Environment__c/fields/sf_devops__Test_Environment__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Test_Environment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, this environment is on test instance, and auth should be performed at test.salesforce.com (not login.salesforce.com)</description>
    <label>Test Environment</label>
    <type>Checkbox</type>
</CustomField>