force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Environment__c/validationRules/sf_devops__Expired_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Expired_Changed</fullName>
    <active>true</active>
    <description>An Environment cannot have its Expired__c field set to false.</description>
    <errorConditionFormula>AND(NOT(sf_devops__Expired__c), ISCHANGED(sf_devops__Expired__c))</errorConditionFormula>
    <errorMessage>An Environment cannot have its Expired__c field set to false.</errorMessage>
</ValidationRule>