force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Environment__c/validationRules/sf_devops__Expired_Insert.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Expired_Insert</fullName>
    <active>true</active>
    <description>An Environment cannot be inserted with Expired__c set to true.</description>
    <errorConditionFormula>AND(sf_devops__Expired__c, ISNEW())</errorConditionFormula>
    <errorMessage>An Environment cannot be inserted with Expired__c set to true.</errorMessage>
</ValidationRule>