force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Environment__c/validationRules/sf_devops__Expired_Replaces.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Expired_Replaces</fullName>
    <active>true</active>
    <description>A replacement Environment must be expired.</description>
    <errorConditionFormula>AND(OR(ISNEW(),ISCHANGED(sf_devops__Replaces__c)), NOT(sf_devops__Replaces__r.sf_devops__Expired__c))</errorConditionFormula>
    <errorMessage>A replacement Environment must be expired.</errorMessage>
</ValidationRule>