force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Environment__c/validationRules/sf_devops__Refresh_Source_And_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Refresh_Source_And_Date</fullName>
    <active>true</active>
    <description>Verify both Refresh_Source and Refresh_Date are set, or both are empty</description>
    <errorConditionFormula>AND(
    OR(ISNEW(), ISCHANGED(sf_devops__Refresh_Source__c), ISCHANGED(sf_devops__Refresh_Date__c)),
     ISBLANK( sf_devops__Refresh_Date__c )  &lt;&gt;  ISBLANK( sf_devops__Refresh_Source__c ) 
  )</errorConditionFormula>
    <errorMessage>Refresh_Source and Refresh_Date most both be set, or both be empty.</errorMessage>
</ValidationRule>