force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Environment__c/validationRules/sf_devops__Unique_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Unique_Name</fullName>
    <active>false</active>
    <description>This rule is no longer enforced</description>
    <errorConditionFormula>FALSE</errorConditionFormula>
    <errorMessage>Deprecated</errorMessage>
</ValidationRule>